# justanothergitgui

./: Cargo.toml  LICENSE  README.md
.claude/: settings.local.json
.github/workflows/: build.yml
docs/: defensive-rules.md  memory-map.md  solid-rules.md  structure.md
prompts/: git_gui_spec
src/: app.rs  commit_rules.rs  git_ops.rs  logging.rs  main.rs  settings.rs  state.rs  worker.rs
src/app/: actions.rs  dialogs.rs  helpers.rs  ports.rs  repo.rs  shell.rs  worker_events.rs
src/core/: mod.rs  ports.rs
src/core/publish/: service.rs
src/core/sync/: service.rs
src/core/tags/: service.rs
src/infra/: core_ports.rs  mod.rs
src/infra/git/: clone.rs  mod.rs  remotes.rs  repository.rs  worktree.rs
src/infra/github/: auth.rs  mod.rs  pulls.rs  repos.rs
src/infra/system/: browser.rs  keychain.rs  mod.rs
src/shared/: actions.rs  conflicts.rs  git.rs  github.rs  mod.rs
src/ui/: bottom_bar.rs  commit_panel.rs  diff_panel.rs  file_panel.rs  history_panel.rs  mod.rs
src/ui/dialogs/: branch.rs  cleanup_branches.rs  clone_repo.rs  discard.rs  github_auth.rs  log_viewer.rs  mod.rs  publish_repo.rs  settings.rs  tag.rs
