[package]
name = "justanothergitgui"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
eframe = "0.34.1"
git2 = { version = "0.20.4", features = ["vendored-libgit2", "vendored-openssl"] }
rand = "0.10.1"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
urlencoding = "2.1.3"
webbrowser = "1.2.0"
