[package]
name = "justanothergitgui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.34.1"
egui_extras = { version = "0.34.1", default-features = false }
git2 = { version = "0.20.4", features = ["vendored-libgit2", "vendored-openssl"] }
keyring = { version = "3.6.2", default-features = false, features = ["windows-native", "sync-secret-service", "vendored"] }
regex = "1.12.2"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
urlencoding = "2.1.3"
webbrowser = "1.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
wgpu = { version = "29", features = ["vulkan-portability"] }

[target.'cfg(target_os = "windows")'.dependencies]
wgpu = { version = "29", features = ["dx12", "angle"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
